2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (do_eval): Set last_form_evaled just before
	dispatching function, so it is not clobbered by argument evaluations.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_op): Use rlcp_tree when constructing the
	dwim_body, since the append2 copies list structure.

	* parser.y (n_exprs): propagate source loc info from both 
	constituents, giving precedence to the left one, rather than just taking
	it from the left one and ignoring the second constituent.  This fixes
	cases of missing location info. The left constituent n_expr is often 
	a symbol, and those do not have location info. We want a case like
	like ((x) y) to take from (x), and (x (y)) to take it from (y),
	and so on.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* parser.y (list): For @n_expr, get the source location info
	from the @ token.
	(n_expr): Bugfix: do not attribute a symbol with location info.
	(quasilit): Obtain location info from quasi_items, and only
	if that is unavailable, then from lineno.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	Version 81

	* txr.c (version): Bumped.

	* txr.1: Bumped version and set date.

	* configure (txr_ver): Bumped.

	* RELNOTES, txr.vim: Updated.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* parser.l (regex_parse, lisp_parse): Better formatting
	for the context string that serves in place of a filename.

2014-02-26  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (expand_place): Unnecessary, buggy function removed.
	It was handling silly special cases with the net effect of being
	nearly equivalent to just expand, while failing to expand places
	which are compound macro calls. It did diagnose nonexistent place
	types at expansion time, which isn't worth much.
	(expand): All the expansions for the mutating operator sset, inc, dec,
	push, pop and flip were also pointless and have been removed.  they did
	the precise equivalent of doing expand(rest(form)), and consing the